--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ function uncompress(str) {
 
     console.log(`"${str}" => "${result}"`);
 }
-                </code>
+                </pre>
             </li>
             <li>
                 Courses from the it-academy "Website development using HTML, CSS and JavaScript". The final project was the layout of the site 
